fixed long press on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,6 @@ button {
   padding: 0;
   margin: 0;
   background-color: papayawhip;
-
 }
 
 .restart {
@@ -80,4 +79,23 @@ img {
 .timer-wrapper {
   display: flex;
   flex-direction: row;
+}
+
+@media (max-width: 800px) {
+  .game {
+    max-width: 100vw;
+    width: max-content;
+    padding: 0;
+    margin: auto;
+  }
+
+  .medium-map .square {
+    width: 95/15vw;
+    height: 95/15vw;
+  }
+
+  .medium-map .square-wrapper {
+    width: 95/15vw;
+    height: 95/15vw;
+  }
 }
